-- |
-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : BSD3
-- Maintainer  : support@keera.co.uk

cabal-version: >=1.6
build-type:    Simple

name:          MissingK
version:       0.0.1
author:        Ivan Perez
maintainer:    ivan.perez@keera.co.uk
homepage:      http://www.keera.co.uk/blog/
license:       BSD3
license-file:  LICENSE
category:      Development
synopsis:      Useful types and definitions missing from other libraries
description:
  Useful types and definitions missing from other libraries.


source-repository head
  type:     git
  location: git://github.com/keera-studios/MissingK.git


library

  exposed-modules:
    Control.Arrow.Extra
    Control.Exception.Extra
    Data.ExtraVersion
    Data.List.Extra
    Data.Stack
    Data.String.Extra
    Language.Haskell.TH.DeriveField
    System.Environment.SetEnv

  build-depends:
      base             >= 4 && < 5
    , template-haskell

  hs-source-dirs:
    src/

  ghc-options:
    -Wall -fno-warn-unused-do-bind -O2
